--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,3 +42,5 @@ Remotes:
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/cynkra/blockr.ui
+BugReports: https://github.com/cynkra/blockr.ui/issues
