--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(dashboard_server)
 export(dashboard_ui)
 export(network_server)
 export(network_ui)
+import(blockr.core)
 import(bslib)
 import(scoutbaR)
 import(shiny)
