--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,9 @@ Imports:
 Remotes:
     cynkra/blockr.core
 Suggests: 
-    testthat (>= 3.0.0)
+    shinytest2,
+    testthat (>= 3.0.0),
+    rlang
 Config/testthat/edition: 3
 URL: https://github.com/cynkra/blockr.ui
 BugReports: https://github.com/cynkra/blockr.ui/issues
