--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,11 +36,13 @@ Imports:
     shinyWidgets,
     blockr.core
 Remotes:
-    cynkra/blockr.core
+    cynkra/blockr.core,
+    cynkra/blockr.dplyr
 Suggests: 
     shinytest2,
     testthat (>= 3.0.0),
-    rlang
+    rlang,
+    blockr.dplyr
 Config/testthat/edition: 3
 URL: https://github.com/cynkra/blockr.ui
 BugReports: https://github.com/cynkra/blockr.ui/issues
