--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(network_server)
 export(network_ui)
 import(blockr.core)
 import(bslib)
+import(gridstackr)
 import(scoutbaR)
 import(shiny)
 import(shinyWidgets)
