--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(main_server)
 export(main_ui)
 export(network_server)
 export(network_ui)
+export(off_canvas)
 import(blockr.core)
 import(bslib)
 import(gridstackr)
