--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,22 @@
 
 S3method(check_connections,data_block)
 S3method(check_connections,transform_block)
+export(actions_ui)
+export(add_connection)
+export(blk_choices)
 export(check_connections)
 export(dashboard_server)
 export(dashboard_ui)
+export(grid_ui)
+export(init_block)
+export(init_connection)
 export(main_server)
 export(main_ui)
 export(network_server)
 export(network_ui)
 export(off_canvas)
+export(properties_ui)
+export(remove_connection)
 import(blockr.core)
 import(bslib)
 import(gridstackr)
