--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     visNetwork,
     shinyWidgets,
     blockr.core,
-    shinyjs
+    shinyjs,
+    gridstackr
 Remotes:
     cynkra/blockr.core,
     cynkra/blockr.dplyr,
