--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(blk_choices)
 export(can_connect)
 export(check_connections)
 export(create_edge)
+export(create_node)
 export(dashboard_server)
 export(dashboard_ui)
 export(grid_ui)
