--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(list_empty_connections,block)
 S3method(list_empty_connections,data_block)
 export(actions_ui)
 export(add_connection)
+export(add_rm_link_server)
+export(add_rm_link_ui)
 export(app_add_rm_block_server)
 export(app_add_rm_block_ui)
 export(blk_choices)
