--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,6 @@ S3method(list_empty_connections,block)
 S3method(list_empty_connections,data_block)
 S3method(remove_block_ui,custom_board)
 export(actions_ui)
-export(add_connection)
 export(add_rm_block_server)
 export(add_rm_block_ui)
 export(add_rm_link_server)
@@ -19,17 +18,14 @@ export(can_connect)
 export(check_connections)
 export(create_edge)
 export(create_node)
-export(dashboard_server)
-export(dashboard_ui)
+export(grid_server)
 export(grid_ui)
-export(init_block)
-export(init_connection)
+export(grid_ui_wrapper)
 export(main_server)
 export(main_ui)
 export(network_server)
 export(network_ui)
 export(properties_ui)
-export(remove_connection)
 import(blockr.core)
 import(bslib)
 import(gridstackr)
