reorder files + add more utils for network

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(add_rm_block_server)
 export(add_rm_block_ui)
 export(add_rm_link_server)
 export(add_rm_link_ui)
+export(apply_validation)
 export(blk_choices)
 export(can_connect)
 export(check_connections)
