start undo/redo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,9 +28,8 @@ export(grid_ui)
 export(grid_ui_wrapper)
 export(main_server)
 export(main_ui)
-export(network_server)
-export(network_ui)
 export(properties_ui)
+export(ser_deser_server)
 export(ser_deser_ui)
 import(blockr.core)
 import(bslib)
