UI tweaks + improve undo/redo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(grid_ui)
 export(grid_ui_wrapper)
 export(main_server)
 export(main_ui)
+export(off_canvas)
 export(properties_ui)
 export(ser_deser_server)
 export(ser_deser_ui)
