--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,9 @@ S3method(can_connect,block)
 S3method(can_connect,data_block)
 S3method(check_connections,block)
 S3method(check_connections,data_block)
+S3method(check_connections,rbind_block)
+S3method(define_conlabel,block)
+S3method(define_conlabel,rbind_block)
 S3method(list_empty_connections,block)
 S3method(list_empty_connections,data_block)
 S3method(remove_block_ui,custom_board)
@@ -23,6 +26,7 @@ export(can_connect)
 export(check_connections)
 export(create_edge)
 export(create_node)
+export(define_conlabel)
 export(grid_server)
 export(grid_ui)
 export(grid_ui_wrapper)
