customize gen code ui

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(check_connections)
 export(create_edge)
 export(create_node)
 export(define_conlabel)
+export(gen_code_ui)
 export(grid_server)
 export(grid_ui)
 export(grid_ui_wrapper)
