fix #18 (validation issue)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(main_server)
 export(main_ui)
 export(off_canvas)
 export(properties_ui)
+export(register_node_validation)
 export(ser_deser_server)
 export(ser_deser_ui)
 import(blockr.core)
