--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,7 +46,8 @@ Suggests:
     shinytest2,
     testthat (>= 3.0.0),
     rlang,
-    blockr.dplyr
+    blockr.dplyr,
+    cyclocomp
 Config/testthat/edition: 3
 URL: https://github.com/cynkra/blockr.ui
 BugReports: https://github.com/cynkra/blockr.ui/issues
