better deps + cleanup shinytest2 test

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,8 @@ Imports:
     blockr.core,
     shinyjs,
     gridstackr,
-    jsonlite
+    jsonlite,
+    htmltools
 Remotes:
     cynkra/blockr.core,
     cynkra/blockr.dplyr,
