--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(main_ui)
 export(off_canvas)
 export(properties_ui)
 export(register_node_validation)
+export(run_demo_app)
 export(ser_deser_server)
 export(ser_deser_ui)
 import(blockr.core)
