--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method(list_empty_connections,block)
 S3method(list_empty_connections,data_block)
 S3method(remove_block_ui,custom_board)
 export(actions_ui)
+export(add_blockr.ui_deps)
 export(add_rm_block_server)
 export(add_rm_block_ui)
 export(add_rm_link_server)
@@ -46,3 +47,6 @@ import(scoutbaR)
 import(shiny)
 import(shinyWidgets)
 import(visNetwork)
+importFrom(htmltools,htmlDependency)
+importFrom(htmltools,tagList)
+importFrom(utils,packageVersion)
