--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,8 @@ Suggests:
     testthat (>= 3.0.0),
     rlang,
     blockr.dplyr,
-    cyclocomp
+    cyclocomp,
+    roxy.shinylive
 Config/testthat/edition: 3
 URL: https://github.com/cynkra/blockr.ui
 BugReports: https://github.com/cynkra/blockr.ui/issues
