--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(blockr_deser,custom_board)
 S3method(blockr_deser,data.frame)
 S3method(blockr_ser,custom_board)
 S3method(blockr_ser,data.frame)
+S3method(board_ui,custom_board)
 S3method(can_connect,block)
 S3method(can_connect,data_block)
 S3method(check_connections,block)
@@ -27,6 +28,7 @@ export(can_connect)
 export(check_connections)
 export(create_edge)
 export(create_node)
+export(custom_board_plugins)
 export(define_conlabel)
 export(gen_code_ui)
 export(grid_server)
