--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,20 +10,22 @@ S3method(can_connect,block)
 S3method(can_connect,data_block)
 S3method(check_connections,block)
 S3method(check_connections,data_block)
+S3method(check_connections,llm_plot_block)
+S3method(check_connections,llm_transform_block)
 S3method(check_connections,rbind_block)
 S3method(define_conlabel,block)
+S3method(define_conlabel,llm_plot_block)
+S3method(define_conlabel,llm_transform_block)
 S3method(define_conlabel,rbind_block)
 S3method(list_empty_connections,block)
 S3method(list_empty_connections,data_block)
 S3method(remove_block_ui,custom_board)
-export(actions_ui)
 export(add_blockr.ui_deps)
 export(add_rm_block_server)
 export(add_rm_block_ui)
 export(add_rm_link_server)
 export(add_rm_link_ui)
 export(apply_validation)
-export(blk_choices)
 export(can_connect)
 export(check_connections)
 export(create_edge)
@@ -33,11 +35,9 @@ export(define_conlabel)
 export(gen_code_ui)
 export(grid_server)
 export(grid_ui)
-export(grid_ui_wrapper)
 export(main_server)
 export(main_ui)
 export(off_canvas)
-export(properties_ui)
 export(register_node_validation)
 export(run_demo_app)
 export(ser_deser_server)
@@ -51,4 +51,5 @@ import(shinyWidgets)
 import(visNetwork)
 importFrom(htmltools,htmlDependency)
 importFrom(htmltools,tagList)
+importFrom(stats,setNames)
 importFrom(utils,packageVersion)
