--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,20 +25,18 @@ export(add_rm_block_server)
 export(add_rm_block_ui)
 export(add_rm_link_server)
 export(add_rm_link_ui)
-export(apply_validation)
 export(can_connect)
 export(check_connections)
-export(create_edge)
-export(create_node)
 export(custom_board_plugins)
 export(define_conlabel)
+export(dropdown_button)
 export(gen_code_ui)
 export(grid_server)
 export(grid_ui)
+export(list_empty_connections)
 export(main_server)
 export(main_ui)
 export(off_canvas)
-export(register_node_validation)
 export(run_demo_app)
 export(ser_deser_server)
 export(ser_deser_ui)
