--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(add_rm_block_server)
 export(add_rm_block_ui)
 export(add_rm_link_server)
 export(add_rm_link_ui)
+export(add_rm_stack_server)
+export(add_rm_stack_ui)
 export(can_connect)
 export(check_connections)
 export(custom_board_plugins)
