--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,7 +49,9 @@ import(scoutbaR)
 import(shiny)
 import(shinyWidgets)
 import(visNetwork)
+importFrom(grDevices,hcl.colors)
 importFrom(htmltools,htmlDependency)
 importFrom(htmltools,tagList)
 importFrom(stats,setNames)
 importFrom(utils,packageVersion)
+importFrom(utils,tail)
