--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,7 +49,8 @@ Suggests:
     rlang,
     blockr.dplyr,
     cyclocomp,
-    roxy.shinylive
+    roxy.shinylive,
+    chromote
 Config/testthat/edition: 3
 URL: https://github.com/cynkra/blockr.ui
 BugReports: https://github.com/cynkra/blockr.ui/issues
