--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ S3method(list_empty_connections,block)
 S3method(list_empty_connections,data_block)
 S3method(remove_block_from_stack,custom_board)
 S3method(remove_block_ui,custom_board)
+S3method(serve,custom_board)
 S3method(stack_ui,custom_board)
 export(add_blockr.ui_deps)
 export(add_rm_block_server)
@@ -41,6 +42,7 @@ export(grid_ui)
 export(list_empty_connections)
 export(main_server)
 export(main_ui)
+export(new_custom_board)
 export(off_canvas)
 export(run_demo_app)
 export(ser_deser_server)
