--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,8 @@ export(can_connect)
 export(check_connections)
 export(dash_board_plugins)
 export(define_conlabel)
+export(dock_server)
+export(dock_ui)
 export(dropdown_button)
 export(gen_code_ui)
 export(grid_server)
