fix grid + R CMD check clean

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(add_block_to_stack,dash_board)
 S3method(add_dashboard_block,dock_board)
+S3method(add_dashboard_block,grid_board)
 S3method(block_ui,dash_board)
 S3method(blockr_deser,dash_board)
 S3method(blockr_deser,data.frame)
@@ -24,6 +25,8 @@ S3method(define_conlabel,block)
 S3method(define_conlabel,llm_plot_block)
 S3method(define_conlabel,llm_transform_block)
 S3method(define_conlabel,rbind_block)
+S3method(init_dashboard_state,dock_board)
+S3method(init_dashboard_state,grid_board)
 S3method(list_empty_connections,block)
 S3method(list_empty_connections,data_block)
 S3method(manage_dashboard,dock_board)
@@ -38,7 +41,6 @@ S3method(serve,dash_board)
 S3method(stack_ui,dash_board)
 S3method(update_dashboard_state,dock_board)
 S3method(update_dashboard_state,grid_board)
-export(add_block_to_grid)
 export(add_blockr.ui_deps)
 export(add_dashboard_block)
 export(add_rm_block_server)
@@ -55,8 +57,6 @@ export(define_conlabel)
 export(dropdown_button)
 export(gen_code_ui)
 export(init_dashboard_state)
-export(init_dashboard_state.dock_board)
-export(init_dashboard_state.grid_board)
 export(list_empty_connections)
 export(main_server)
 export(main_ui)
