fix dock serialisation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(add_dashboard_block,grid_board)
 S3method(block_ui,dash_board)
 S3method(blockr_deser,dash_board)
 S3method(blockr_deser,data.frame)
+S3method(blockr_deser,dock)
 S3method(blockr_ser,dash_board)
 S3method(blockr_ser,data.frame)
 S3method(blockr_ser,dock)
