don't import shinyWidget, fix bugs (missing callback for node menu on restore, better trigger with cold_start for restoration of network, serialisation issues, ...)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ S3method(check_connections,data_block)
 S3method(check_connections,llm_plot_block)
 S3method(check_connections,llm_transform_block)
 S3method(check_connections,rbind_block)
+S3method(create_app_state,dock_board)
+S3method(create_app_state,grid_board)
 S3method(dashboard_server,dock_board)
 S3method(dashboard_server,grid_board)
 S3method(dashboard_ui,dock_board)
@@ -26,6 +28,8 @@ S3method(define_conlabel,block)
 S3method(define_conlabel,llm_plot_block)
 S3method(define_conlabel,llm_transform_block)
 S3method(define_conlabel,rbind_block)
+S3method(find_blocks_ids,dock_board)
+S3method(find_blocks_ids,grid_board)
 S3method(init_dashboard_state,dock_board)
 S3method(init_dashboard_state,grid_board)
 S3method(list_empty_connections,block)
@@ -36,8 +40,7 @@ S3method(remove_block_from_stack,dash_board)
 S3method(remove_block_ui,dash_board)
 S3method(remove_dashboard_block,dock_board)
 S3method(remove_dashboard_block,grid_board)
-S3method(restore_dashboard,dock_board)
-S3method(restore_dashboard,grid_board)
+S3method(restore_dashboard,dash_board)
 S3method(serve,dash_board)
 S3method(stack_ui,dash_board)
 S3method(update_dashboard_state,dock_board)
@@ -52,10 +55,12 @@ export(add_rm_stack_server)
 export(add_rm_stack_ui)
 export(can_connect)
 export(check_connections)
+export(create_app_state)
 export(dash_board_plugins)
 export(dashboard_server)
 export(define_conlabel)
 export(dropdown_button)
+export(find_blocks_ids)
 export(gen_code_ui)
 export(init_dashboard_state)
 export(list_empty_connections)
@@ -76,7 +81,6 @@ import(dockViewR)
 import(gridstackr)
 import(scoutbaR)
 import(shiny)
-import(shinyWidgets)
 import(visNetwork)
 importFrom(grDevices,hcl.colors)
 importFrom(htmltools,htmlDependency)
