--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,8 @@ export(add_blockr.ui_deps)
 export(add_dashboard_block)
 export(add_rm_block_server)
 export(add_rm_block_ui)
+export(add_rm_link_g6_server)
+export(add_rm_link_g6_ui)
 export(add_rm_link_server)
 export(add_rm_link_ui)
 export(add_rm_stack_server)
@@ -77,6 +79,7 @@ export(update_dashboard_state)
 import(blockr.core)
 import(bslib)
 import(dockViewR)
+import(g6R)
 import(gridstackr)
 import(scoutbaR)
 import(shiny)
