--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,8 +48,10 @@ export(add_blockr.ui_deps)
 export(add_dashboard_block)
 export(add_rm_block_server)
 export(add_rm_block_ui)
-export(add_rm_link_g6_server)
-export(add_rm_link_g6_ui)
+export(add_rm_g6_link_server)
+export(add_rm_g6_link_ui)
+export(add_rm_g6_stack_server)
+export(add_rm_g6_stack_ui)
 export(add_rm_link_server)
 export(add_rm_link_ui)
 export(add_rm_stack_server)
