--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ S3method(block_ui,dash_board)
 S3method(blockr_deser,dash_board)
 S3method(blockr_deser,data.frame)
 S3method(blockr_deser,dock)
+S3method(blockr_deser,network)
 S3method(blockr_ser,dash_board)
 S3method(blockr_ser,data.frame)
 S3method(blockr_ser,dock)
+S3method(blockr_ser,network)
 S3method(board_ui,dash_board)
 S3method(can_connect,block)
 S3method(can_connect,data_block)
