--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,7 +46,7 @@ Remotes:
     BristolMyersSquibb/blockr.io,
     BristolMyersSquibb/blockr.ai,
     BristolMyersSquibb/blockr.sdtm,
-    cynkra/g6R
+    cynkra/g6R,
     cynkra/scoutbaR
 Suggests: 
     shinytest2,
