fix multiconnect for llm block

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,11 +16,13 @@ S3method(can_connect,block)
 S3method(can_connect,data_block)
 S3method(check_connections,block)
 S3method(check_connections,data_block)
+S3method(check_connections,llm_block)
 S3method(check_connections,rbind_block)
 S3method(create_app_state,dock_board)
 S3method(dashboard_server,dock_board)
 S3method(dashboard_ui,dock_board)
 S3method(define_conlabel,block)
+S3method(define_conlabel,llm_block)
 S3method(define_conlabel,rbind_block)
 S3method(find_blocks_ids,dock_board)
 S3method(list_empty_connections,block)
