more broken stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ S3method(define_conlabel,block)
 S3method(define_conlabel,llm_block)
 S3method(define_conlabel,rbind_block)
 S3method(find_blocks_ids,dock_board)
+S3method(insert_block_ui,dash_board)
 S3method(list_empty_connections,block)
 S3method(list_empty_connections,data_block)
 S3method(manage_dashboard,dock_board)
@@ -51,7 +52,8 @@ export(dashboard_server)
 export(define_conlabel)
 export(dropdown_button)
 export(find_blocks_ids)
-export(gen_code_ui)
+export(generate_code_server)
+export(generate_code_ui)
 export(init_dashboard_state)
 export(list_empty_connections)
 export(main_server)
