--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(blockr_ser,dash_board)
 S3method(blockr_ser,data.frame)
 S3method(blockr_ser,dock)
 S3method(blockr_ser,network)
+S3method(board_ui,board_options)
 S3method(board_ui,dash_board)
 S3method(can_connect,block)
 S3method(can_connect,data_block)
@@ -32,7 +33,9 @@ S3method(remove_block_ui,dash_board)
 S3method(restore_dashboard,dash_board)
 S3method(serve,dash_board)
 S3method(stack_ui,dash_board)
+S3method(update_ui,board_options)
 export(add_blockr.ui_deps)
+export(add_busy_load_deps)
 export(add_rm_block_server)
 export(add_rm_block_ui)
 export(add_rm_link_server)
