--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,3 +61,5 @@ Suggests:
 Config/testthat/edition: 3
 URL: https://github.com/cynkra/blockr.ui
 BugReports: https://github.com/cynkra/blockr.ui/issues
+Depends: 
+    R (>= 2.10)
