--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,18 +38,17 @@ export(add_blockr.ui_deps)
 export(add_busy_load_deps)
 export(add_rm_block_server)
 export(add_rm_block_ui)
-export(add_rm_link_server)
 export(add_rm_link_ui)
 export(add_rm_stack_server)
 export(add_rm_stack_ui)
 export(can_connect)
 export(check_connections)
 export(create_app_state)
-export(dash_board_plugins)
 export(dashboard_server)
 export(define_conlabel)
 export(dropdown_button)
 export(find_blocks_ids)
+export(gen_add_rm_link_server)
 export(generate_code_server)
 export(generate_code_ui)
 export(init_dashboard_state)
