export `new_board_module()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(generate_code_ui)
 export(list_empty_connections)
 export(main_server)
 export(main_ui)
+export(new_board_module)
 export(new_dag_board)
 export(off_canvas)
 export(restore_dashboard)
