--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,7 +59,7 @@ Suggests:
     roxy.shinylive,
     chromote
 Config/testthat/edition: 3
-URL: https://github.com/cynkra/blockr.ui
-BugReports: https://github.com/cynkra/blockr.ui/issues
+URL: https://github.com/BristolMyersSquibb/blockr.ui/, https://bristolmyerssquibb.github.io/blockr.ui/
+BugReports: https://github.com/BristolMyersSquibb/blockr.ui/issues
 Depends: 
     R (>= 2.10)
