--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -63,3 +63,4 @@ URL: https://github.com/BristolMyersSquibb/blockr.ui/, https://bristolmyerssquib
 BugReports: https://github.com/BristolMyersSquibb/blockr.ui/issues
 Depends: 
     R (>= 2.10)
+Config/Needs/website: rmarkdown
