--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,7 +55,9 @@ export(list_empty_connections)
 export(main_server)
 export(main_ui)
 export(new_board_module)
+export(new_context_menu_entry)
 export(new_dag_board)
+export(new_dashboard_module)
 export(off_canvas)
 export(restore_dashboard)
 export(run_demo_app)
