--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,7 +58,8 @@ Suggests:
     cyclocomp,
     roxy.shinylive,
     chromote,
-    quarto
+    quarto,
+    knitr
 Config/testthat/edition: 3
 URL: https://github.com/BristolMyersSquibb/blockr.ui/, https://bristolmyerssquibb.github.io/blockr.ui/
 BugReports: https://github.com/BristolMyersSquibb/blockr.ui/issues
