--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ S3method(remove_block_from_stack,dag_board)
 S3method(remove_block_ui,dag_board)
 S3method(restore_dashboard,dag_board)
 S3method(serve,dag_board)
+S3method(serve,md_board)
 S3method(stack_ui,dag_board)
 S3method(update_ui,board_options)
 export(add_blockr.ui_deps)
